# postmark-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  design.md  example.env  pyproject.toml  pytest.ini
.github/workflows/: publish.yml  tests.yml
examples/: get_messages.py  send_attachment.py  send_bulk.py  send_messages.py
examples/bounces/: activate_bounce.py  get_bounce.py  get_bounce_dump.py  get_delivery_stats.py  list_bounces.py  list_bounces_filtered.py  stream_bounces.py
examples/data_removals/: create_data_removal.py  get_data_removal.py
examples/domains/: create_domain.py  delete_domain.py  edit_domain.py  get_domain.py  list_domains.py  rotate_dkim.py  verify_dkim.py  verify_return_path.py
examples/inbound_messages/: bypass_inbound.py  get_inbound_by_id.py  list_inbound.py  retry_inbound.py
examples/inbound_rules/: create_inbound_rule.py  delete_inbound_rule.py  list_inbound_rules.py
examples/message_streams/: archive_stream.py  create_stream.py  edit_stream.py  get_stream.py  list_streams.py  unarchive_stream.py
examples/outbound_messages/: get_outbound_dump.py  list_and_stream_outbound.py  list_outbound_clicks.py  list_outbound_opens.py  send_outbound_batch.py  send_outbound_bulk.py  send_outbound_simple.py  send_outbound_simple_with_attachment.py  send_outbound_simple_with_custom_header.py
examples/outgoing/: get_messages.py  send_batch.py  send_bulk.py  send_simple_with_custom_header.py
examples/sending_messages/: get_messages.py  send_batch.py  send_bulk.py  send_simple.py  send_simple_with_attachment.py  send_simple_with_custom_header.py
examples/servers/: create_server.py  delete_server.py  edit_server.py  get_server.py  get_server_by_id.py  list_servers.py
examples/signatures/: create_signature.py  delete_signature.py  edit_signature.py  get_signature.py  list_signatures.py  resend_confirmation.py
examples/stats/: bounce_counts.py  browser_platform_usage.py  browser_usage.py  click_counts.py  click_location.py  email_client_usage.py  open_counts.py  outbound_overview.py  platform_usage.py  read_times.py  sent_counts.py  spam_counts.py  tracked_counts.py
examples/suppressions/: create_suppression.py  delete_suppression.py  dump_suppressions.py
examples/templates/: create_template.py  delete_template.py  edit_template.py  get_template.py  list_templates.py  push_templates.py  send_batch_with_templates.py  send_with_template.py  validate_template.py
examples/webhooks/: create_webhook.py  delete_webhook.py  edit_webhook.py  get_webhook.py  list_webhooks.py
postmark/: __init__.py  exceptions.py
postmark/clients/: account_client.py  server_client.py
postmark/models/: __init__.py  client.py  messages.py  page.py
postmark/models/bounces/: __init__.py  enums.py  manager.py  schemas.py
postmark/models/data_removals/: __init__.py  manager.py  schemas.py
postmark/models/domains/: __init__.py  manager.py  schemas.py
postmark/models/inbound/: __init__.py  manager.py  schemas.py
postmark/models/inbound_rules/: __init__.py  manager.py  schemas.py
postmark/models/messages/: __init__.py  enums.py  manager.py  schemas.py
postmark/models/outbound/: __init__.py  enums.py  manager.py  schemas.py
postmark/models/servers/: __init__.py  account_manager.py  enums.py  manager.py  schemas.py
postmark/models/signatures/: __init__.py  manager.py  schemas.py
postmark/models/stats/: __init__.py  manager.py  schemas.py
postmark/models/streams/: __init__.py  enums.py  manager.py  schemas.py
postmark/models/suppressions/: __init__.py  enums.py  manager.py  schemas.py
postmark/models/templates/: __init__.py  account_manager.py  enums.py  manager.py  schemas.py
postmark/models/webhooks/: __init__.py  manager.py  schemas.py
postmark/utils/: message_utils.py  pagination.py  server_utils.py  timing.py  types.py
tests/: conftest.py  test_account_client.py  test_account_servers.py  test_bounces.py  test_bulk_messages.py  test_client.py  test_data_removals.py  test_domains.py  test_inbound.py  test_inbound_rules.py  test_message_utils.py  test_messages.py  test_retrieve_messages.py  test_send_messages.py  test_server_client.py  test_server_utils.py  test_servers.py  test_signatures.py  test_stats.py  test_streams.py  test_suppressions.py  test_templates.py  test_webhooks.py
