[tool.poetry]
name = "postmark"
version = "0.1.0"
description = "The Official Postmark Python SDK."
authors = ["Greg Svoboda gsvoboda@activecampaign.com"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"             # Concurrency (async) and HTTP requests
pydantic = "^2.6.0"           # Type safety and validation
email-validator = "^2.1.1"    # REQUIRED by pydantic.EmailStr for email format validation
tenacity = "^8.2.3"           # Resilience and retry logic
python-dotenv = "^1.0.1"      # To load environment variables for testing
certifi = "^2025.11.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"             # Testing framework
pytest-asyncio = "^0.23.6"    # To run async tests with pytest
respx = "^0.21.0"             # Mocking HTTP requests for testing
pytest-cov = "^7.0.0"         # For coverage reports
black = "^25.12.0"
isort = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
